# WraithTrack

./: .gitignore  README.md  example_single.json  instastory.py  listdb.py  listfiles.py  model.py  populate_db.py  pyproject.toml  pytest.ini  requirements.txt  run-web.py  setup.py  spottest.sh  test_results.txt  wraithdisco.py  wraithtrack.py
artistrack/: artistrack.py  test_output.txt  web.py
artistrack/data/: 2025-02-17__artist_data.json  artistrack.db  bearer_token.json  data_manager.py  listdb.py  model.py  populate_singles.py  wraith.db
artistrack/discotech/: generate_discography.py  spotify_client.py
artistrack/storybuilder/: config.yaml  instastory.py
disco/: generate_discography.py
tests/: conftest.py  test_artistrack.py  test_config.yaml  test_data_manager.py  test_generate_discography.py  test_listdb.py  test_spotify_client.py  test_story_generator.py
